# rickroll

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: const.hpp  main.cpp  urlopen.hpp  urlopen_linux.cpp  urlopen_mac.cpp  urlopen_win.cpp
toolchain/: mingw-w64-i686.cmake  mingw-w64-x86_64.cmake
